--- a/AMAppExportToIPA.xcodeproj/xcshareddata/xcschemes/AMAppExportToIPA.xcscheme
+++ b/AMAppExportToIPA.xcodeproj/xcshareddata/xcschemes/AMAppExportToIPA.xcscheme
@@ -15,9 +15,9 @@
             <BuildableReference
                BuildableIdentifier = "primary"
                BlueprintIdentifier = "242F77621C730DCF005EFFA4"
-               BuildableName = "AMAppExportToIPA-Xcode-Plugin.xcplugin"
-               BlueprintName = "AMAppExportToIPA-Xcode-Plugin"
-               ReferencedContainer = "container:AMAppExportToIPA-Xcode-Plugin.xcodeproj">
+               BuildableName = "AMAppExportToIPA.xcplugin"
+               BlueprintName = "AMAppExportToIPA"
+               ReferencedContainer = "container:AMAppExportToIPA.xcodeproj">
             </BuildableReference>
          </BuildActionEntry>
       </BuildActionEntries>
@@ -51,9 +51,9 @@
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "242F77621C730DCF005EFFA4"
-            BuildableName = "AMAppExportToIPA-Xcode-Plugin.xcplugin"
-            BlueprintName = "AMAppExportToIPA-Xcode-Plugin"
-            ReferencedContainer = "container:AMAppExportToIPA-Xcode-Plugin.xcodeproj">
+            BuildableName = "AMAppExportToIPA.xcplugin"
+            BlueprintName = "AMAppExportToIPA"
+            ReferencedContainer = "container:AMAppExportToIPA.xcodeproj">
          </BuildableReference>
       </MacroExpansion>
       <AdditionalOptions>
@@ -69,9 +69,9 @@
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "242F77621C730DCF005EFFA4"
-            BuildableName = "AMAppExportToIPA-Xcode-Plugin.xcplugin"
-            BlueprintName = "AMAppExportToIPA-Xcode-Plugin"
-            ReferencedContainer = "container:AMAppExportToIPA-Xcode-Plugin.xcodeproj">
+            BuildableName = "AMAppExportToIPA.xcplugin"
+            BlueprintName = "AMAppExportToIPA"
+            ReferencedContainer = "container:AMAppExportToIPA.xcodeproj">
          </BuildableReference>
       </MacroExpansion>
    </ProfileAction>
